--- a/index.html
+++ b/index.html
@@ -1,32 +1,3 @@
-<!--
-
-Three-body problem simulation.
-
-https://evgenii.com/blog/three-body-problem-simulator/
-
-You can copy/paste this code into an HTML file (a file with a name that ends with .html). Then this file can be opened locally on your computer or you can put it on your web site. Note that the code uses images loaded from https://evgenii.com web site. You will need to host these images if you want to make sure the simulation always works and is not dependent on evgenii.com web site.
-
-License: Public Domain
-
-
-Credits
-=============
-
-1. This work is based on code and lectures by Dr Rosemary Mardling from Monash University.
-
-2. "The Blue Marble" By  NASA/Apollo 17 crew; taken by either Harrison Schmitt or Ron Evans. Sources: http://www.nasa.gov/images/content/115334main_image_feature_329_ys_full.jpg, https://commons.wikimedia.org/wiki/File:The_Earth_seen_from_Apollo_17.jpg
-
-3. "The Sun photographed at 304 angstroms" by NASA/SDO (AIA). Sources: http://sdo.gsfc.nasa.gov/assets/img/browse/2010/08/19/20100819_003221_4096_0304.jpg, https://commons.wikimedia.org/wiki/File:The_Sun_by_the_Atmospheric_Imaging_Assembly_of_NASA%27s_Solar_Dynamics_Observatory_-_20100819.jpg
-
-4. **"Jupiter's South Pole"** image: NASA/JPL-Caltech/SwRI/MSSS/Betsy Asher Hall/Gervasio Robles, [source](https://www.nasa.gov/image-feature/jupiters-south-pole).
-
-5. **Figure eight orbit**: Moore, C. 1993, Phys. Rev. Lett., 70, 3675.
-
-6. **Kepler-16 system**: Doyle, L. R., Carter, J. A., Fabrycky, D. C., et al. 2011, Science, 333, 1602.
-
--->
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,6 +8,7 @@ Credits
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="./script.min.js"></script>
+  <script defer src="./handleLoad.min.js"></script>
 </head>
 
 <body>
@@ -76,11 +48,10 @@ Credits
   </div>
 
 
-  <button class="preset button" data-name="SunEarthJupiter">Sun, Earth and
-    Jupiter</button>
-  <button class="preset button button--isSelected" data-name="FigureEight">Figure eight</button>
-  <button class="preset button" data-name="LagrangePoint5">Lagrange point L5</button>
+  <button class="preset button" data-name="SunEarthJupiter">Sun, Earth, Jupiter</button>
+  <button class="preset button button--isSelected" data-name="FigureEight">Figure-8</button>
   <button class="preset button" data-name="Kepler16">Kepler-16</button>
+  <button class="preset button" data-name="LagrangePoint5">Lagrange point L5</button>
   <button class="preset button" data-name="Chaotic">Chaotic</button>
 
   <p class='debugOutput'></p>
